<resources>
    <string name="app_name">micro:bit</string>
    <string name="app_name_without_colon">microbit</string>
    <string name="home_activity_name"></string>
    <string name="poweredBy">Powered by\r\n SAMSUNG</string>
    <string name="copyright">Copyright © 1995&#8211;2015 SAMSUNG</string>
    <string name="developed_by">Developed by</string>
    <string name="create_code_url" translatable="false">http://microbit.org/code</string>
    <string name="discover_url" translatable="false">http://microbit.org/</string>
    <string name="my_scripts_url" translatable="false">https://www.microbit.co.uk/app/</string>
    <string name="privacy_policy_url" translatable="false">http://microbit.org/privacy</string>
    <string name="terms_of_use_url" translatable="false">http://microbit.org/terms-of-use</string>
    <string name="about_url" translatable="false">http://microbit.org/about</string>
    <string name="feedback_email_address" translatable="false">rohit.ail@samsung.com</string>
    <string name="user_agent" translatable="false">SamsungBrowser/microbit Profile/OTA-DFU1.0</string>
    <string name="search_BLE_activity">Search micro:bit</string>
    <string name="device_details">Device_details</string>
    <string name="dummy_section_text" formatted="false">Section %1d is just a dummy section.</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="phase1_complete_ok">Phase 1 completed. press button 1 followed by button on screen</string>
    <string name="phase2_complete_ok">Phase 2 completed. Device should be flashed</string>
    <string name="phase1_complete_not_ok">Device not found or in right mode or connection error</string>
    <string name="downloading_file">Downloading file</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">micro:bit Device Scan</string>
    <string name="title_activity_ledgrid">Find micro:bit</string>
    <string name="title_activity_connect">Connect</string>
    <string name="title_activity_gamepad">GamePad</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="microbit_not_found">micro:bit not found. Please search.</string>
    <string name="microbit_found">Use existing micro:bit ?</string>
    <string name="error_bluetooth_not_enabled">Bluetooth not enabled.</string>
    <string name="devices_bluetooth_not_enabled">Click to enable Bluetooth.</string>
    <string name="devices_initiate_process">Click to start.</string>
    <string name="devices_find_microbit">Search</string>
    <string name="devices_generate_code">Click to generate code.</string>
    <string name="devices_scanning">Looking for micro:bit, click to stop.</string>
    <string name="devices_ble_unsupported">BLE Not supported on your device</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="pattern_to_flash">Enter the pattern displayed on your micro:bit to flash</string>
    <string name="pattern_to_pair">Enter the pattern displayed on your micro:bit to pair</string>
    <string name="pairing_failed_message">Cannot pair with the micro:bit.\n Retry?</string>
    <string name="pairing_failed_title">Pairing unsuccessful</string>
    <string name="pairing_success_message_1">You have successfully paired with micro:bit </string>
    <string name="pairing_success_title">micro:bit paired</string>
    <string name="run_code_button_name">Continue to Flash</string>
    <string name="flashing_failed_not_found">Flashing Failed!Cannot read the file</string>
    <string name="flashing_failed_io_error">Flashing Failed! Cannot find the file. Please reset micro:bit and try again.</string>
    <string name="flashing_failed_message">Flashing Failed! No Programs Found</string>
    <string name="flashing_aborted">Flashing aborted! Required service not found on device. Please reset micro:bit and try again.</string>
    <string name="flashing_verifcation_failed">Flashing Failed</string>
    <string name="flashing_verifcation_failed_title">Cannot verify the flashing code. Please reset micro:bit and try again.</string>
    <string name="flashing_aborted_title">Aborted</string>
    <string name="flashing_failed_title">Flashing unsuccessful</string>
    <string name="flashing_progress_message">Please do not interact with micro:bit before flashing process is complete</string>
    <string name="flashing_success_message">You have successfully downloaded program to micro:bit</string>
    <string name="flashing_success_title">Flashing successful</string>
    <string name="flashing_error">Error</string>
    <string name="flashing_failed_no_microbit">At least one micro:bit must be paired before flashing </string>
    <string name="flashing_tip_title">Put the micro:bit in Flashing mode</string>
    <string name="pairing_tip">Hold buttons A and B down and then press RESET.\n Wait for "BLUEZONE" to appear on micro:bit before releasing buttons </string>
    <string name="flash_start_message">Do you want to flash the program to %s ?</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_live">Live</string>
    <string name="menu_stage">Stage</string>
    <string name="menu_test">Test</string>
    <string name="menu_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="menu_main_menu">Menu</string>
    <string name="menu_main_explore">Explore</string>
    <string name="menu_main_about">About</string>
    <string name="menu_main_help">Help</string>
    <string name="menu_main_privacy_cookies">Privacy &amp; Cookies</string>
    <string name="menu_main_terms_conditions">Terms &amp; Conditions</string>
    <string name="menu_main_send_feedback">Send us your feedback</string>
    <string name="menu_main_share_statistics">Share statistics</string>
    <string name="picture">Picture</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="intro_message">
        <![CDATA[

            Camera enabled!

        ]]>
    </string>
    <string name="camera_not_found">Camera Not Found</string>
    <string name="title_activity_about_us">about_us</string>
    <string name="back_button">Take me Back</string>
    <string name="about_us"> That\'s All !! Happy Coding </string>
    <string name="vibrating_via_microbit">Vibrating via micro:bit!</string>
    <string name="findphone_via_microbit">Find my phone alert via micro:bit!</string>
    <string name="ringtone_via_microbit">Playing ringtone via micro:bit!</string>
    <string name="sound_via_microbit">Playing sound via micro:bit!</string>
    <string name="alert">Alert&#8230;</string>
    <string name="previous_devices">Connect previously paired micro:bit</string>
    <string name="desc_previous_devices">No previously paired micro:bits</string>
    <string name="new_devices_pattern_null">Enter the pattern</string>
    <string name="new_devices">Connect to a new device</string>
    <string name="name_device">Name device</string>
    <string name="name_empty_error">Please enter device name.</string>
    <string name="connect">Connect</string>
    <string name="gamepad">Gamepad</string>
    <string name="connectNew">Pair a new micro:bit</string>
    <string name="connect_tip_title">How to pair your micro:bit</string>
    <string name="step_connect_tip_text_step_three">Step 3</string>
    <string name="step_connect_tip_text_step_four_text">When you see the success message, \npress RESET and you\'re done!</string>
    <string name="connect_tip_text_step">Step 1</string>
    <string name="step_connect_tip_text_step_four">Step 4</string>
    <string name="desc_step_connect_tip_text_step_four_text">When you see the success message, press RESET and you\'re done!</string>
    <string name="desc_step_connect_tip_text_step_three">Step 3</string>
    <string name="step_connect_tip_text_step_three_text">When asked, press button A \nand enter your PIN</string>
    <string name="step_connect_tip_text_step_three_text_one_line">When asked, press button A and enter your PIN</string>
    <string name="desc_step_connect_tip_text_step_three_text">When asked, press button A and enter your PIN</string>
    <string name="desc_step_connect_tip_text_step_four">Step 4</string>
    <string name="searching_microbit_found_message">Open your notification drawer \nand enter your Pin</string>
    <string name="searching_microbit_found_message_one_line">Open your notification drawer and enter your Pin</string>
    <string name="desc_searching_microbit_found_message">Open your notification drawer and enter your Pin</string>
    <string name="step_connect_tip_text_step_two">Step 2</string>
    <string name="connect_tip_text">Hold the A and B buttons, then PRESS RESET</string>
    <string name="desc_connect_tip_text">Hold the A and B buttons, then PRESS RESET</string>
    <string name="desc_connect_tip_text_step">Step one</string>
    <string name="connect_tip_text_step_text">Hold the A and B buttons,\nthen PRESS RESET</string>
    <string name="desc_connect_tip_text_step_two">Step two</string>
    <string name="connect_tip_text_step_two_text">When asked, enter your PIP \n(personal identification pattern) </string>
    <string name="searching_tip_text_instructions">(you only have 30 seconds)</string>
    <string name="desc_searching_tip_text">You only have 30 seconds</string>
    <string name="flash">Flash</string>
    <string name="connect_device">Connect</string>
    <string name="manage_microbit_txt_one_line">To remove a paired micro:bit, go to the bluetooth section in your device settings</string>
    <string name="desc_manage_microbit_txt">To remove a paired micro:bit, go to the bluetooth section in your device settings</string>
    <string name="desc_connect_microbit_problems_message">Having problems? Try the help page.</string>
    <string name="connect_microbit_problems_message_two_lines">Having problems? \nTry the help page.</string>
    <string name="desc_manage_and_remove_microbits_label">How do I remove a paired micro:bit?</string>
    <string name="manage_and_remove_microbit">How do I remove a paired micro:bit?</string>
    <string name="desc_connect_btn">Connect</string>
    <string name="desc_back_to_home_from_flash_btn">Back to Menu</string>
    <string name="desc_flash_toolbar_header">Flash</string>
    <string name="desc_connect_back_to_home_btn">Back to Menu</string>
    <string name="nav_draw_menu">Menu</string>
    <string name="nav_draw_about">About</string>
    <string name="nav_draw_help">Help</string>
    <string name="nav_draw_privacy_cookies"><![CDATA[Privacy & Cookies]]></string>
    <string name="nav_draw_terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="nav_draw_send_feedback">Send us your feedback</string>
    <string name="nav_draw_share_statistics">Share Statistics</string>
    <string name="desc_nav_drawer_menu">Close Menu</string>
    <string name="desc_share_statistics_description">This information will only be used to analyse and improve the services offered through this app. For information, see our privacy policy </string>
    <string name="txt_pair_btn">Pair</string>
    <string name="txt_cancel_btn">Cancel</string>
    <string name="desc_connection_status_flash_text">Micro:Bit connection status</string>
    <string name="searching_tip_step_text">When asked for a PIN,\npress button A</string>
</resources>