<?xml version="1.0" encoding="utf-8"?><!-- steps and instructions -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pairTipButtonText"
    style="@style/pairing_step_tip_layout_style"
    tools:showIn="@layout/view_pairing_step_1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pair_tip_step_1_step"
            style="@style/pairing_step_tip_text_style"
            android:contentDescription="@string/desc_connect_tip_text_step"
            android:text="@string/connect_tip_text_step" />

        <TextView
            android:id="@+id/pair_tip_step_1_instructions"
            style="@style/pairing_step_tip_text_style"
            android:contentDescription="@string/desc_connect_tip_text"
            android:text="@string/connect_tip_text" />
    </LinearLayout>

    <ImageView
        android:id="@+id/pairing_step_one_image"
        style="@style/pairing_step_image_layout_style"
        android:src="@drawable/ic_person_step_1" />
</LinearLayout>