<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/headerBar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/main_gray_color"
    android:elevation="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_projects">

    <!-- back button-->
    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        android:contentDescription="@string/desc_back_to_home_from_flash_btn"
        android:nextFocusDown="@id/flash_projects_title_txt"
        android:onClick="onClick"
        android:padding="@dimen/app_bar_back_btn_padding"
        android:src="@drawable/ic_back_arrow" />

    <!-- Small divider -->
    <include layout="@layout/app_bar_small_divider" />

    <!-- App bar title-->
    <TextView
        android:id="@+id/flash_projects_title_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:contentDescription="@string/desc_flash_toolbar_header"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:nextFocusDown="@+id/connectedIndicatorIcon"
        android:text="@string/flash"
        android:textSize="@dimen/app_bar_title_text_size"
        android:textColor="@android:color/white" />

    <!-- Big divider -->
    <View
        android:layout_width="@dimen/app_bar_divider_width"
        android:layout_height="match_parent"
        android:alpha="@dimen/app_bar_divider_alpha"
        android:background="@android:color/white" />

    <!-- Connected device  -->
    <LinearLayout
        android:id="@+id/ll_toolbar_indicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:nextFocusDown="@+id/appNameButton"
        android:orientation="vertical">

        <TextView
            android:id="@+id/connectedIndicatorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/project_app_bat_device_name_margin_top"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <!-- Small divider -->
    <include layout="@layout/app_bar_small_divider" />

    <!-- connected device status -->
    <ImageView
        android:id="@+id/connectedIndicatorIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/desc_connection_status_flash_text"
        android:importantForAccessibility="yes"
        android:nextFocusDown="@+id/ll_toolbar_indicator"
        android:onClick="onClick"
        android:padding="@dimen/project_app_bar_connect_btn_padding"
        android:src="@drawable/device_status_connected" />
</LinearLayout>